--- a/.github/workflows/clone_repo.yml
+++ b/.github/workflows/clone_repo.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           repository: ${{ github.event.inputs.TARGET_REPO }}
           path: target
+          token:  ${{ secrets.GH_CLONE_TOKEN }}
       - shell: bash
         run: |
           cp -rf source/* target/
