--- a/.github/workflows/setup_repo.yml
+++ b/.github/workflows/setup_repo.yml
@@ -60,12 +60,12 @@ jobs:
           git push
       - shell: bash
         run: |
-          echo: "PROJECT_NAME: ${{ github.event.inputs.PROJECT_NAME }}"
-          echo: "REGION: ${{ github.event.inputs.REGION }}"
-          echo: "COST_CENTER: ${{ github.event.inputs.COST_CENTER }}"
-          echo: "STAGE: ${{ github.event.inputs.STAGE }}"
-          echo: "ORGANIZATION: ${{ github.event.inputs.ORGANIZATION }}"
-          echo: "TARGET_REPO: ${{ github.event.inputs.TARGET_REPO }}"
+          echo 'PROJECT_NAME: ${{ github.event.inputs.PROJECT_NAME }}'
+          echo 'REGION: ${{ github.event.inputs.REGION }}'
+          echo 'COST_CENTER: ${{ github.event.inputs.COST_CENTER }}'
+          echo 'STAGE: ${{ github.event.inputs.STAGE }}'
+          echo 'ORGANIZATION: ${{ github.event.inputs.ORGANIZATION }}'
+          echo 'TARGET_REPO: ${{ github.event.inputs.TARGET_REPO }}'
   
 #  trigger-terraform:
 #    runs-on: ubuntu-latest
